[TASK]     Code cleanup according to PHPStan
[TASK]     Code cleanup according to PHPStorm code inspections
[TASK]     Remove deprecated scheduler task for indexing, use schedulable console command instead as explained in https://docs.typo3.org/p/tpwd/ke_search/main/en-us/Indexing/Index.html#starting-the-indexing-process-automatically
[DOCS]     Fix documentation about when the conjunctions in the search phrase won't work.

Version 4.5.1, September 2022
[BUGFIX]   Fix labels for hidden_content and show hidden_content in index records (applies only when index records are made visible by Page TSconfig).
[BUGFIX]   Show images with language "All" in result list. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/issues/77
[BUGFIX]   Ignore empty values for preselected filters in order to make them work with route enhancers and pagination. Thanks to André Steiling. https://github.com/tpwd/ke_search/issues/126
[TASK]     Do not fetch page records and do not add tags to page records if no startingpoints are given to avoid SQL error. Thanks to Veljko Stefanovic. https://github.com/tpwd/ke_search/issues/117 and https://github.com/tpwd/ke_search/issues/66
[TASK]     Add static Page TSconfig file which allows to only show ke_search records in the New Record wizard. Thanks to Michael Reuber
[TASK]     Rename Page TSconfig file suffix from .txt to .tsconfig.
[DOCS]     Fix link to ke_search_hooks repository and extend documentation about custom indexers. Thanks to Luka C. https://github.com/tpwd/ke_search/issues/122
[DOCS]     Add sortdate to the routing example
[DOCS]     Add documentation about custom filter rendering

Version 4.5.0, September 2022
[!!!]      This version changes the database structure and ads an additional fulltext index. Please do a full indexing after upgrading.
[FEATURE]  Index custom file references in page indexer. Thanks to Patrick Crausaz. https://github.com/tpwd/ke_search/pull/119