@@ -7,6 +7,7 @@ Upcoming version
 [TASK]     Code cleanup according to PHPStan
 [TASK]     Code cleanup according to PHPStorm code inspections
 [TASK]     Remove deprecated scheduler task for indexing, use schedulable console command instead as explained in https://docs.typo3.org/p/tpwd/ke_search/main/en-us/Indexing/Index.html#starting-the-indexing-process-automatically
+[BUGFIX]   Fix typehint and quoting for targetpid parameter from int to string. Thanks to Naderio. https://github.com/tpwd/ke_search/issues/129
 [DOCS]     Fix documentation about when the conjunctions in the search phrase won't work.
 
 Version 4.5.1, September 2022
